test/types/sync/ferguson/non-nilable-single-error.good
non-nilable-single-error.chpl:2: error: sync/single types cannot yet contain non-nilable classes
